--- a/src/css/home.css
+++ b/src/css/home.css
@@ -71,6 +71,8 @@
   display: flex;
   align-items: center;
   gap: 2vw;
+  border: none;
+  background-color: transparent;
 }
 .comment-section {
   display: flex;
@@ -80,9 +82,8 @@
 .footer {
   display: flex;
   justify-content: center;
-  gap: 12vw;
   border-top: 1px solid gray;
-  padding: 2vh 0;
+  padding: 2vh;
   margin-top: 10vh;
 }
 .home-footer,
@@ -90,16 +91,14 @@
 .frame-footer,
 .profile-footer {
   display: flex;
-  flex-direction: column;
-  line-height: 1px;
+  border: none;
+  background-color: transparent;
+  width: 40vw;
 }
-footer-title {
-  font-weight: normal;
-}
-.homeImg,
-.searchImg,
-.frameImg,
-.profilefImg {
-  width: 25px;
-  height: 25px;
+.search-icon,
+.home-icon,
+.frame-icon,
+.profile-icon {
+  width: 85px;
+  height: 40px;
 }
