--- a/src/css/home.css
+++ b/src/css/home.css
@@ -4,46 +4,56 @@
   justify-content: space-between;
   padding: 2vw;
 }
+
 .left-box {
   display: flex;
   align-items: center;
   gap: 2vw;
 }
+
 .logo,
 .heart-img {
   width: 30px;
   height: 30px;
 }
+
 .title {
   font-weight: 300;
 }
+
 .heart-button {
   border: none;
   background-color: transparent;
 }
+
 .header-section {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1vh 2vw;
 }
+
 .person-left-side {
   display: flex;
   align-items: center;
   gap: 2vw;
 }
+
 .name-box {
   line-height: 2px;
   text-align: start;
 }
+
 .name {
   font-size: 16px;
   font-weight: bold;
 }
+
 .position {
   font-size: 12px;
   font-weight: 300;
 }
+
 .settings-button {
   display: flex;
   align-items: center;
@@ -53,53 +63,59 @@
   border-radius: 50%;
   padding-bottom: 1vh;
 }
+
 .person-photo {
   width: 40px;
   height: 40px;
 }
+
 .main-section {
   display: flex;
   justify-content: center;
-  margin-bottom: 2vh;
+  margin-bottom: 1vh;
 }
+
 .footer-section {
   display: flex;
   gap: 5vw;
   margin-bottom: 2vh;
 }
+
 .like-section {
   display: flex;
   align-items: center;
   gap: 2vw;
+  border: none;
+  background-color: transparent;
 }
+
 .comment-section {
   display: flex;
   align-items: center;
   gap: 2vw;
 }
-.footer {
+
+
+.footer-navbar {
   display: flex;
   justify-content: center;
-  gap: 12vw;
   border-top: 1px solid gray;
-  padding: 2vh 0;
+  padding: 2vh;
   margin-top: 10vh;
 }
+
 .home-footer,
 .search-footer,
 .frame-footer,
 .profile-footer {
   display: flex;
-  flex-direction: column;
-  line-height: 1px;
+  border: none;
+  background-color: transparent;
+  width: 40vw;
 }
-footer-title {
-  font-weight: normal;
-}
-.homeImg,
-.searchImg,
-.frameImg,
-.profilefImg {
-  width: 25px;
-  height: 25px;
+
+
+nav-icon {
+  width: 85px;
+  height: 40px;
 }
