created new commentsPage with feedback

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -62,8 +62,10 @@
   justify-content: center;
   margin-bottom: 1vh;
 }
-.footer-section {
+
+.main-footer-section {
   display: flex;
+  align-items: center;
   gap: 5vw;
   margin-bottom: 2vh;
 }
@@ -79,6 +81,7 @@
   align-items: center;
   gap: 2vw;
 }
+
 .footer-navbar {
   display: flex;
   justify-content: center;
