ownprofile - start building gallery template

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
     --secondary-color: #424242;
     --border-color: #EEEEEE;
     --domain-color: #246BFD;
+    --feed-color: #FF4D67;
     --font-family-bold: 'UrbanistVar', sans-serif;
     --font-family-thin: 'UrbanistLight';
     --font-size-rem: 10px;
