--- a/src/css/own_profile.css
+++ b/src/css/own_profile.css
@@ -27,6 +27,8 @@
 .profile_main_bar section h2 {
     display: inline-block;
     font-size: calc(var(--font-size-rem) * 2.4);
+    font-weight: 500;
+    padding-left: 0.5rem;
 }
 
 /* Profile - Image ------------------------------------- */
@@ -36,28 +38,29 @@
 }
 
 .profile_article .profile_img {
-    width: 16%;
+    width: 33%;
     max-width: 100%;
     height: auto;
 }
 
 .edit_icon {
     position: absolute;
-    top: 72%;
-    left: 53.5%;
+    top: 77%;
+    left: 58.5%;
 }
 
 /* Profile - Facts ------------------------------------- */
 
 .profile_article h1 {
     font-size: calc(var(--font-size-rem) * 2.4);
-    font-weight: 300;
-    line-height: 3rem;
+    font-weight: 500;
 }
 
 .profile_article h3 {
-    font-size: calc(var(--font-size-rem) * 1.6);
-    font-weight: 600;
+    font-size: calc(var(--font-size-rem) * 1.4);
+    font-weight: 500;
+    letter-spacing: 0.2px;
+
 }
 
 .profile_article p:nth-of-type(1) {
@@ -104,4 +107,13 @@
     border-bottom: 1px solid var(--border-color);
     margin: 0;
     padding: 4%;
+}
+
+/* Profile - Gallery - Section --------------- */
+
+.gallery h5 {
+    color: var(--feed-color);
+    font-size: calc(var(--font-size-rem) * 1.6);
+    font-weight: 500;
+    letter-spacing: 0.2px;
 }
