--- a/src/css/searchAll.css
+++ b/src/css/searchAll.css
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-top: 2vh;
   gap: 3vh;
+  height: 100vh;
 }
-
 .search-header {
   position: relative;
   display: flex;
@@ -13,18 +14,20 @@
 .search-icon {
   position: absolute;
   left: 8%;
-  top: 30%;
+  top: 25%;
 }
 .search-person-container {
-    margin-bottom: -10vh;
+  overflow-y: auto;
+  max-height: calc(100vh - 150px);
 }
+
 .search-person-section {
   display: flex;
   justify-content: space-between;
   align-items: center;
   border: none;
   padding: 0 2vw;
-  margin-bottom: 1vh;
+  height: 12vh;
 }
 .followButton {
   background-color: transparent;
@@ -32,13 +35,13 @@
 }
 .input-box {
   width: 70%;
-  padding: 3vh 10vw;
-  border-radius: 10px;
-  border: none;
-  background-color: #f5f5f5;
+  padding: 2vh 10vw;
+  border-radius: 13px;
+  border: 1px solid lightgray;
+  background-color: transparent;
 }
-
 .center-icon {
   border-bottom: 3px solid red;
   padding-bottom: 2vh;
+  text-align: center;
 }
