--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
 @font-face {
     font-family: 'UrbanistVar';
     src: url('./resource/fonts/Urbanist-VariableFont_wght.ttf') format('truetype');
