--- a/src/css/otherProfile.css
+++ b/src/css/otherProfile.css
@@ -10,6 +10,8 @@
     width: 95%;
     margin: 0 auto;
     padding: 0;
+    text-align: center;
+    padding: 2vh 3vw;
 }
 
 .otherprofile_page p {
@@ -28,11 +30,16 @@
     padding: 0 0.5rem;
 }
 
+.profile_mainbar section {
+    display: flex;
+}
+
 .profile_mainbar section h2 {
     display: inline-block;
     font-size: calc(var(--font-size-rem) * 2.4);
     font-weight: 500;
     padding-left: 0.5rem;
+    margin: 0;
 }
 
 /* Profile - Image ------------------------------------- */
