--- a/src/css/ownProfile.css
+++ b/src/css/ownProfile.css
@@ -10,6 +10,8 @@
     width: 95%;
     margin: 0 auto;
     padding: 0;
+    text-align: center;
+    padding: 2vh 3vw;
 }
 
 .ownprofile_page p {
@@ -28,11 +30,16 @@
     padding: 0 0.5rem;
 }
 
+.profile_main_bar section {
+    display: flex;
+}
+
 .profile_main_bar section h2 {
     display: inline-block;
     font-size: calc(var(--font-size-rem) * 2.4);
     font-weight: 500;
     padding-left: 0.5rem;
+    margin: 0;
 }
 
 /* Profile - Image ------------------------------------- */
@@ -40,6 +47,7 @@
 .image-container {
     position: relative;
     padding-top: 10px;
+    margin: 0 auto;
 }
 
 .profile_article .profile_img {
