--- a/src/css/post.css
+++ b/src/css/post.css
@@ -1,95 +1,97 @@
 .master {
-    margin: 1vh 2vw;
-    font-family: var(--font-family-bold);
-    color: var(--primary-color);
+  margin: 1vh 2vw;
+  font-family: var(--font-family-bold);
+  color: var(--primary-color);
 }
 
 .new_post_title {
-    display: flex;
-    align-items: center;
-    gap: 5%;
+  display: flex;
+  align-items: center;
+  gap: 5%;
 }
 
 .new_post {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 3vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 3vh;
 }
 
 .profile_pic {
-    width: 15%;
+  width: 15%;
 }
 
 #post_text {
-    border: none;
-    background-color: #FAFAFA;
-    width: 60%;
-    padding-top: 3vh;
-    padding-left: 3vw;
-    font-family: var(--font-family-bold);
+  border: none;
+  border-radius: 10px;
+  background-color: #fafafa;
+  width: 60%;
+  padding-top: 3vh;
+  padding-left: 3vw;
+  font-family: var(--font-family-bold);
 }
 
 .post_pic {
-    width: 15%;
+  width: 15%;
 }
 
 .location {
-    display: flex;
-    gap: 2%;
+  display: flex;
+  align-items: center;
+  gap: 2%;
 }
 
 hr {
-    border-color: #EEEEEE;
-    margin: 1.5vh 0;
+  border-color: #eeeeee;
+  margin: 1.5vh 0;
 }
 
 .post_to {
-    text-align: left;
+  text-align: left;
 }
 
 .toggle label {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 10rem;
-    height: 3rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 10rem;
+  height: 3rem;
 }
 
 .toggle input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 
 .toggle .slider {
-    position: absolute;
-    height: 1.9rem;
-    top: 1;
-    left: 18.5rem;
-    right: -12rem;
-    bottom: 2;
-    background-color: #EEEEEE;
-    border-radius: 1rem;
-    transition: 0.3s;
+  position: absolute;
+  height: 1.9rem;
+  top: 1;
+  left: 18.5rem;
+  right: -12rem;
+  bottom: 2;
+  background-color: #eeeeee;
+  border-radius: 1rem;
+  transition: 0.3s;
 }
 
 .toggle .slider::before {
-    position: absolute;
-    content: "";
-    height: 1.5rem;
-    width: 1.5rem;
-    left: 0.2rem;
-    bottom: .2rem;
-    background-color: white;
-    border-radius: 50%;
-    transition: 0.3s;
+  position: absolute;
+  content: "";
+  height: 1.5rem;
+  width: 1.5rem;
+  left: 0.2rem;
+  bottom: 0.2rem;
+  background-color: white;
+  border-radius: 50%;
+  transition: 0.3s;
 }
 
-.toggle input:checked+.slider {
-    background-color: #FF4D67;
+.toggle input:checked + .slider {
+  background-color: #ff4d67;
 }
 
-input:checked+.slider:before {
-    transform: translateX(25px);
+input:checked + .slider:before {
+  transform: translateX(25px);
 }
