editProfile Page is finished + add Routes

--- a/src/css/editProfile.css
+++ b/src/css/editProfile.css
@@ -14,14 +14,27 @@
     padding: 2vh 3vw;
 }
 
+/* Edit - Profile - Topbar ------------------------------------- */
 
+.editprofile_topbar {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding-left: 7px;
+}
+
+.editprofile_topbar h5 {
+    font-size: calc(var(--font-size-rem)*2.2);
+    margin: 0;
+    padding: 0;
+    padding-bottom: 5px;
+}
 
 /* Edit - Profile - Image ------------------------------------- */
 
 .image-container {
-
     padding: 10px 0;
-    margin: 0 auto;
+    margin: 10px auto 0 auto;
 }
 
 .editprofile_page .profile_image {
@@ -37,7 +50,6 @@
 
 /* Edit - Profile - Form -------------------------*/
 
-
 .text_form {
     margin: 0 auto;
 }
@@ -46,21 +58,22 @@
 .text_form select {
     display: inline-block;
     margin-top: 12px;
+    font-family: var(--font-family-bold);
     background-color: var(--input-color);
+    font-weight: 500;
     border-radius: 10px;
     width: 90%;
     padding: 15px;
     border-style: none;
+    appearance: none;
 }
 
 .text_form select {
     width: 98%;
-    padding-right: 10px;
     appearance: none;
     background-image: url('../resource/icons/ArrowDown_dropdown_editProfile.png');
     background-position: 97%;
     background-repeat: no-repeat;
-    padding-right: 10px;
 }
 
 .text_form input:nth-of-type(4) {
@@ -78,4 +91,16 @@
 .text_form input:focus,
 .text_form select:focus {
     outline: none;
+}
+
+/* Submit - Button -------------------------------------------- */
+
+.submit_button {
+    color: var(--pure-white);
+    background-color: var(--feed-color);
+    width: 98%;
+    border-style: none;
+    border-radius: 30px;
+    padding: 15px 0;
+    margin: 20px 0 30px 0;
 }
