--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   --domain-color: #246BFD;
   --feed-color: #FF4D67;
   --input-color: #FAFAFA;
+  --pure-white: #FFFFFF;
   --font-family-bold: 'UrbanistVar', sans-serif;
   --font-family-thin: 'UrbanistLight', sans-serif;
   --font-size-rem: 10px;
