--- a/src/css/ownProfile.css
+++ b/src/css/ownProfile.css
@@ -20,26 +20,29 @@
 
 /* Profile - Bar - Top ---------------------------------- */
 
-.profile_main_bar {
+.profile_mainbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.profile_main_bar img {
-    padding: 0 0.5rem;
+.profile_mainbar section img {
+    padding-left: 7px;
 }
 
-.profile_main_bar section {
+.profile_mainbar section {
     display: flex;
 }
 
-.profile_main_bar section h2 {
+.profile_mainbar section h2 {
     display: inline-block;
     font-size: calc(var(--font-size-rem) * 2.4);
     font-weight: 500;
-    padding-left: 0.5rem;
     margin: 0;
+}
+
+.profile_mainbar nav img {
+    padding: 0 0.5rem;
 }
 
 /* Profile - Image ------------------------------------- */
@@ -47,7 +50,6 @@
 .image-container {
     position: relative;
     padding-top: 10px;
-    margin: 0 auto;
 }
 
 .profile_article .profile_img {
@@ -67,7 +69,7 @@
 .profile_article h1 {
     font-size: calc(var(--font-size-rem) * 2.4);
     font-weight: 600;
-    margin-top: 10px;
+    margin-top: 12px;
 }
 
 .profile_article h3 {
