--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,30 @@ body {
 :root {
   --primary-color: #212121;
   --secondary-color: #424242;
-  --border-color: #EEEEEE;
-  --domain-color: #246BFD;
-  --feed-color: #FF4D67;
-  --input-color: #FAFAFA;
-  --font-family-bold: 'UrbanistVar', sans-serif;
-  --font-family-thin: 'UrbanistLight', sans-serif;
+  --border-color: #eeeeee;
+  --domain-color: #246bfd;
+  --feed-color: #ff4d67;
+  --input-color: #fafafa;
+  --font-family-bold: "UrbanistVar", sans-serif;
+  --font-family-thin: "UrbanistLight", sans-serif;
   --font-size-rem: 10px;
   --letter-spacing: 0.2px;
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(100%);
+  }
 }
