--- a/src/css/ownProfile.css
+++ b/src/css/ownProfile.css
@@ -3,7 +3,6 @@
 @import "../index.css";
 
 /* ------------------------------------------------------ */
-
 .ownprofile_page {
   font-family: var(--font-family-bold);
   color: var(--primary-color);
@@ -17,7 +16,6 @@
 .ownprofile_page p {
   letter-spacing: var(--letter-spacing);
 }
-
 /* Profile - Bar - Top ---------------------------------- */
 
 .profile_main_bar {
@@ -37,6 +35,10 @@
   padding-left: 0.5rem;
   margin: 0;
 }
+.head-navigation {
+  display: flex;
+  gap: 2vw;
+}
 .settingsButton {
   border: none;
   background-color: transparent;
@@ -53,6 +55,8 @@
   animation-duration: 0.5s;
   animation-fill-mode: both;
   padding: 16px;
+  border-top: 1px solid gray;
+  border-radius: 45px 45px 0 0;
 }
 .slide-up {
   animation-name: slideUp;
@@ -74,8 +78,8 @@
   padding-left: 3vw;
   font-size: 1.3rem;
 }
-.setting-name:hover {
-  transform: scale(1.2);
+.setting-item:hover {
+  transform: scale(1.1);
   transition: all;
 }
 /* Profile - Image ------------------------------------- */
@@ -85,9 +89,7 @@
   padding-top: 10px;
   margin: 0 auto;
 
-
-/* Profile - Image ------------------------------------- */
-
+  /* Profile - Image ------------------------------------- */
 }
 .profile_article .profile_img {
   width: 33%;
@@ -98,11 +100,8 @@
   position: absolute;
   top: 77%;
   left: 58.5%;
-
 }
-
 /* Profile - Facts ------------------------------------- */
-
 .profile_article h1 {
   font-size: calc(var(--font-size-rem) * 2.4);
   font-weight: 600;
@@ -127,9 +126,7 @@
   font-weight: 500;
   color: var(--domain-color);
 }
-
 /* Profile - Facts - Follower - Section --------------- */
-
 .follower_section {
   display: flex;
   padding-top: 1rem;
@@ -160,11 +157,9 @@
   margin: 20px auto;
   width: 95%;
 }
-
 /* PROFILE - GALLERY ------------------------- */
 
 /* Profile - Gallery - Header --------------- */
-
 .profile_gallery_header {
   display: flex;
   justify-content: center;
