--- a/src/css/upload.css
+++ b/src/css/upload.css
@@ -60,6 +60,14 @@
     margin-right: 2vw;
 }
 
+.gallery_button {
+    background-color: white;
+    border: none;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+}
+
 .dropdown-options {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
