--- a/src/css/searchAll.css
+++ b/src/css/searchAll.css
@@ -19,7 +19,6 @@
   overflow-y: auto;
   max-height: calc(100vh - 250px);
 }
-
 .search-person-section {
   display: flex;
   justify-content: space-between;
@@ -43,4 +42,18 @@
   border-bottom: 3px solid red;
   padding-bottom: 2vh;
   text-align: center;
+}
+.footer-navbar {
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid lightgray;
+  padding: 2vh 2vw;
+}
+.home-footer,
+.search-footer,
+.frame-footer,
+.profile-footer {
+  display: flex;
+  border: none;
+  background-color: transparent;
 }
