--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   --input-color-1: #FAFAFA;
   --input-color-2: #ececec;
   --pure-white: #FFFFFF;
+  --small-text: #9E9E9E;
   --font-family-bold: 'UrbanistVar', sans-serif;
   --font-family-thin: 'UrbanistLight', sans-serif;
   --font-size-rem: 10px;
