--- a/src/css/editProfile.css
+++ b/src/css/editProfile.css
@@ -11,7 +11,7 @@
     margin: 0 auto;
     padding: 0;
     text-align: center;
-    padding: 2vh 3vw;
+    padding: 1vh 0;
 }
 
 /* Edit - Profile - Topbar ------------------------------------- */
@@ -21,11 +21,13 @@
     align-items: center;
     gap: 15px;
     padding-left: 7px;
+    position: relative;
+
 }
 
 .editprofile_topbar h5 {
     font-size: calc(var(--font-size-rem)*2.2);
-    margin: 0;
+    margin: 20px 0;
     padding: 0;
     padding-bottom: 5px;
 }
@@ -33,36 +35,74 @@
 
 /* Edit - Profile - Image ------------------------------------- */
 
-.image-container {
-    padding: 10px 0;
+.edit-image-container {
+    padding: 20px 0;
     margin: 0 auto;
-}
-
-.editprofile_page .profile_image {
     position: relative;
-    width: 33%;
 }
 
-.editprofile_page .edit_icon {
-    position: absolute;
-    top: 71%;
-    left: 57%;
+.editprofile-page .profile-image {
+    width: 33%;
+    border-radius: 60px;
 }
+
+.edit-icon {
+    position: absolute;
+    top: 68%;
+    left: 57%;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+}
+
+.edit-profile-file {
+    color: transparent;
+    position: absolute;
+    top: 72%;
+    right: 35.5%;
+    width: 7%;
+    z-index: 1;
+}
+
+/* .edit-profile-file::-webkit-file-upload-button {
+    visibility: hidden;
+} */
+
+.center-file-name {
+    margin-top: 10px;
+}
+
+.btn-green {
+    /* visibility: hidden; */
+    margin-top: 10px;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 30px;
+}
+
 
 /* Edit - Profile - Form -------------------------*/
 
 .text_form {
     margin: 0 auto;
+    position: relative;
 }
 
-.text_form input,
-.text_form select,
-.text_form textarea {
+.text_form .name,
+.text_form .username,
+.text_form .activity,
+.text_form .birthday,
+.text_form .email,
+.text_form .tel,
+.text_form .website,
+.text_form .gender,
+.text_form .aboutme {
     display: inline-block;
     margin-top: 12px;
     font-family: var(--font-family-bold);
     color: var(--secondary-color);
     background-color: var(--input-color-1);
+    font-size: calc(var(--font-size-rem)*1.3);
     font-weight: 500;
     border-radius: 10px;
     width: 90%;
@@ -72,7 +112,7 @@
     resize: none;
 }
 
-.text_form select {
+.text_form .gender {
     width: 98%;
     appearance: none;
     background-image: url('../resource/icons/ArrowDown_dropdown_editProfile.png');
@@ -80,32 +120,55 @@
     background-repeat: no-repeat;
 }
 
-input[type="date"]::-webkit-calendar-picker-indicator {
-    background-image: url('../resource/icons/Groupcalendar_icon.svg');
+/* ::-webkit-calendar-picker-indicator  */
+
+.text_form .birthday {
+    position: relative;
     background-repeat: no-repeat;
-    text-align: right;
-    background-size: 110%;
+    background-size: 100%;
 }
 
-/* input[type="date"]::placeholder {
-    display: none;
-} */
+.text_form .birthday::-webkit-calendar-picker-indicator {
+    opacity: 0.01;
+    cursor: pointer;
+}
 
-.text_form input:nth-of-type(5) {
+.text_form .calendarIcon {
+    position: absolute;
+    right: 3%;
+    top: 35.5%;
+    width: 5%;
+    cursor: pointer;
+}
+
+
+.text_form .email {
     background-image: url('../resource/icons/Groupmail_icon.svg');
     background-repeat: no-repeat;
-    background-position: 96.5%;
+    background-position: 97.5%;
 }
 
-.text_form input:hover,
-.text_form select:hover,
-.text_form textarea:hover {
+.text_form .name:hover,
+.text_form .username:hover,
+.text_form .activity:hover,
+.text_form .birthday:hover,
+.text_form .email:hover,
+.text_form .tel:hover,
+.text_form .gender:hover,
+.text_form .website:hover,
+.text_form .aboutme:hover {
     background-color: var(--input-color-2);
 }
 
-.text_form input:focus,
-.text_form select:focus,
-.text_form textarea:focus {
+.text_form .name:focus,
+.text_form .username:focus,
+.text_form .activity:focus,
+.text_form .birthday:focus,
+.text_form .email:focus,
+.text_form .tel:focus,
+.text_form .gender:focus,
+.text_form .website:focus,
+.text_form .aboutme:focus {
     outline: none;
 }
 
